Don't change for reading something and format yaml better.

--- a/generate_readme.yml
+++ b/generate_readme.yml
@@ -45,6 +45,7 @@
       args:
         chdir: "{{ role_path }}"
       register: compatibility
+      changed_when: no
 
     - name: load example
       slurp:
