Add settings.yml for https://probot.github.io/apps/settings/

--- a/generate_readme.yml
+++ b/generate_readme.yml
@@ -56,3 +56,13 @@
       template:
         src: "{{ playbook_dir }}/templates/README.md.j2"
         dest: "{{ role_path }}/README.md"
+
+    - name: create .github
+      file:
+        path: "{{ role_path }}/.github"
+        state: directory
+
+    - name: render .github/settings.yml
+      template:
+        src: "{{ playbook_dir }}/templates/settings.yml.j2"
+        dest: "{{ role_path }}/.github/settings.yml"
