Preparation not required.

--- a/generate_readme.yml
+++ b/generate_readme.yml
@@ -52,10 +52,17 @@
         src: "{{ role_path }}/molecule/resources/playbook.yml"
       register: example
 
+    - name: check if prepare.yml exists
+      stat:
+        path: "{{ role_path }}/molecule/resources/prepare.yml"
+      register: check_prepare
+
     - name: load prepare
       slurp:
         src: "{{ role_path }}/molecule/resources/prepare.yml"
       register: prepare
+      when:
+        - "{{ check_prepare.stat.exists }}"
 
     - name: render template
       template:
