--- a/generate_readme.yml
+++ b/generate_readme.yml
@@ -67,7 +67,7 @@
         src: "{{ role_path }}/molecule/resources/prepare.yml"
       register: prepare
       when:
-        - "{{ check_prepare.stat.exists }}"
+        - check_prepare.stat.exists | bool
 
     - name: render template
       template:
