--- a/generate_readme.yml
+++ b/generate_readme.yml
@@ -33,17 +33,17 @@
       when:
         - versionymlstat.stat.exists
 
-    - name: see if exception.md exists
+    - name: see if exception.yml exists
       stat:
-        path: "{{ role_path }}/meta/exception.md"
-      register: exceptionmdstat
+        path: "{{ role_path }}/meta/exception.yml"
+      register: exceptionymlstat
 
-    - name: load meta/exception.md
-      slurp:
-        src: "{{ role_path }}/meta/exception.md"
-      register: exceptionmd
+    - name: load meta/exception.yml
+      include_vars:
+        file: "{{ role_path }}/meta/exception.yml"
+      register: exceptionyml
       when:
-        - exceptionmdstat.stat.exists
+        - exceptionymlstat.stat.exists
 
     - name: load defaults/main.yml
       slurp:
@@ -92,6 +92,14 @@
       register: prepare
       when:
         - check_prepare.stat.exists | bool
+
+    - name: debug
+      debug:
+        msg: "{{ versionyml }}"
+
+    - name: debug
+      debug:
+        msg: "{{ exceptionyml }}"
 
     - name: render template
       template:
