--- a/generate_readme.yml
+++ b/generate_readme.yml
@@ -8,8 +8,8 @@
   tasks:
     - name: set role_path and role_name
       set_fact:
-        role_path: "{{ pwd }}"
-        role_name: "{{ pwd | basename | regex_replace('ansible-role-') }}"
+        role_path: "{{ lookup('env', 'PWD') }}"
+        role_name: "{{ lookup('env', 'PWD') | basename | regex_replace('ansible-role-') }}"
 
     - name: load meta
       include_vars:
