--- a/generate_molecule.yml
+++ b/generate_molecule.yml
@@ -6,36 +6,17 @@
   gather_facts: no
 
   tasks:
-    - name: set facts
+    - name: set role_path and role_name
       set_fact:
-        role_name: "{{ pwd | basename | regex_replace('ansible-role-') }}"
-        role_path: "{{ pwd }}"
+        role_path: "{{ lookup('env', 'PWD') }}"
+        role_name: "{{ lookup('env', 'PWD') | basename | regex_replace('ansible-role-') }}"
+
+    - name: see if molecule/default/verify.yml exists
+      stat:
+        path: "{{ role_path }}/molecule/default/verify.yml"
+      register: verify
 
     - name: generate generic molecule.yml
       template:
-        src: "generic-molecule.yml.j2"
-        dest: "{{ role_path }}/molecule/{{ item }}/molecule.yml"
-      with_items:
-        - centos-6
-        - centos-latest
-        - debian-latest
-        - debian-stable
-        - debian-unstable
-        - fedora-latest
-        - opensuse-leap
-        - ubuntu-devel
-        - ubuntu-latest
-        - ubuntu-rolling
-
-    - name: generate specific molecule.yml
-      template:
-        src: "{{ item }}-molecule.yml.j2"
-        dest: "{{ role_path }}/molecule/{{ item }}/molecule.yml"
-      with_items:
-        - alpine-edge
-        - alpine-latest
-        - archlinux
-        - default
-        - ec2
-        - fedora-rawhide
-        - vagrant
+        src: "molecule.yml.j2"
+        dest: "{{ role_path }}/molecule/default/molecule.yml"
